lib/src/compiler/tests/testdata/errors/14.out
error[E104]: unexpected negative number
 --> line:6:15
  |
6 |     $a in (0..-2)
  |               ^^ this number can not be negative
  |